[package]
name = "rust-battery-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
serde = { version = "1.0.195", features = ["derive"]}
